# myappbase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  my.version.in  myapp.doxygen.in  pipeline.jsonc
.cicd/: build.sh  generate-pipeline.sh  installation-build.sh  submodule-regression-check.sh
.cicd/helpers/: file-hash.sh
.cicd/metrics/: test-metrics.js
CMakeModules/: MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  my-config.cmake.in  package.cmake
libraries/: CMakeLists.txt
libraries/version/include/version/: version.hpp
libraries/version/src/: version.cpp  version_impl.cpp.in  version_impl.hpp
plugins/: CMakeLists.txt  make_new_plugin.sh
plugins/help_http/: CMakeLists.txt  help_http.cpp
plugins/help_http/include/help_http/: help_http.hpp  local_endpoint.hpp
plugins/help_http_client/: CMakeLists.txt  help_http_client.cpp
plugins/help_http_client/include/help_http_client/: help_http_client.hpp
plugins/help_jpush/: CMakeLists.txt  help_jpush.cpp  jpush.h
plugins/help_jpush/include/help_jpush/: help_jpush.hpp
plugins/help_kafka/: CMakeLists.txt  help_kafka.cpp
plugins/help_kafka/include/help_kafka/: help_kafka.hpp
plugins/help_mongo/: CMakeLists.txt  bson.cpp  help_mongo.cpp
plugins/help_mongo/include/help_mongo/: bson.hpp  help_mongo.hpp
plugins/help_mqtt/: CMakeLists.txt  async_publish.cpp  async_subscribe.cpp  build.sh  help_mqtt.cpp
plugins/help_mqtt/include/help_mqtt/: help_mqtt.hpp
plugins/http_plugin/: CMakeLists.txt  http_plugin.cpp
plugins/http_plugin/include/http_plugin/: http_plugin.hpp
plugins/mqtt2kafka_plugin/: CMakeLists.txt  mqtt2kafka_plugin.cpp
plugins/mqtt2kafka_plugin/include/mqtt2kafka_plugin/: mqtt2kafka_plugin.hpp
plugins/mqtt2mongo_plugin/: CMakeLists.txt  mqtt2mongo_plugin.cpp
plugins/mqtt2mongo_plugin/include/mqtt2mongo_plugin/: mqtt2mongo_plugin.hpp
plugins/plugin_help/: CMakeLists.txt  lock.cpp
plugins/plugin_help/include/plugin_help/: exceptions.hpp  localize.hpp  lock.hpp  thread_utils.hpp
programs/: CMakeLists.txt
programs/eosio-mqtt2kafka/: CMakeLists.txt  main.cpp
programs/eosio-mqtt2mongo/: CMakeLists.txt  main.cpp
programs/myapp-mqtt2kafka/: CMakeLists.txt  main.cpp
programs/myapp-mqtt2mongo/: CMakeLists.txt  main.cpp
scripts/: .build_vars  .environment  CMakeLists.txt  generate_bottle.sh  generate_deb.sh  generate_package.sh.in  generate_tarball.sh  myapp-tn_bounce.sh  myapp-tn_down.sh  myapp-tn_roll.sh  myapp-tn_up.sh  myapp_build.sh  myapp_build_amazonlinux.sh  myapp_build_centos.sh  myapp_build_darwin.sh  myapp_build_ubuntu.sh  myapp_install.sh  myapp_uninstall.sh  myappbase-tn_bounce.sh  myappbase-tn_down.sh  myappbase-tn_roll.sh  myappbase-tn_up.sh  myappbase_build.sh  myappbase_build_amazonlinux.sh  myappbase_build_centos.sh  myappbase_build_darwin.sh  myappbase_build_ubuntu.sh  myappbase_install.sh  myappbase_uninstall.sh
scripts/helpers/: general.sh  myapp.sh  myappbase.sh
